--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_mapviewer_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_mapviewer_sextant.less
@@ -255,7 +255,7 @@
       .fa-stack {
         font-size: 12px;
         position: absolute;
-        top: 0;
+        top: 1px;
       }
       .panel-heading {
         position: absolute;
